[package]
name = "aoc2023"
version = "0.1.0"
authors = ["Phil Hord <phil.hord@gmail.com>"]
edition = "2021"
repository = "https://github.com/phord/AdventOfCode2023"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaah = "0.2.1"
clap = { version = "4.0", features = ["derive"] }
num = "0.4"

criterion = "0.4"
itertools = "0.10.5"
fnv = "1.0.3"
nom = "7"
memoize = "0.3.3"
colored = "2"
termion = "*"
ndarray = "*"

[[bench]]
name = "aoc-bench"
harness = false
